# sash

./: setup.cfg  setup.py
docs/: index.rst  quickstart.rst
examples/blinky/: xedaproject.toml
examples/vhdl/: xedaproject.toml
src/xeda/: __init__.py  _version.py  utils.py  xeda_app.py
src/xeda/flow_runner/: __init__.py  default_runner.py
src/xeda/flows/: flow.py  flow_gen.py
src/xeda/flows/ise/: __init__.py
src/xeda/flows/vivado/: vivado_power.py  vivado_project.py  vivado_sim.py  vivado_synth.py
src/xeda/flows/vivado/templates/: vivado_project.tcl  vivado_synth.tcl
xeda/: __init__.py  cli.py  context.py  xeda_app.py
xeda/flow_runner/: __init__.py  default_runner.py
xeda/flows/: flow.py
xeda/flows/ise/: __init__.py
xeda/flows/ise/templates/: ise_synth.tcl
xeda/flows/vivado/: vivado_synth.py
xeda/flows/vivado/templates/: vivado_sim.tcl
xeda/flows/yosys/: yosys.py
xeda/flows/yosys/templates/: yosys.ys
xeda/plugins/: __init__.py  dummy.py
