[metadata]
name = xeda
license = Apache Software License
classifiers=
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 4 - Beta,
    Intended Audience :: Science/Research,
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA),
    Topic :: Utilities
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

description-file = README.md

[options]
include_package_data = True
package_dir =
    =src
packages = find:

python_requires = >=3.6, <4

install_requires =
    jinja2>=3.0.1
    colored>=1.4.2
    progress>=1.5
    coloredlogs>=14
    pebble>=4.6.1
    numpy>=1.19.5
    toml>=0.10.2
    shtab>=1.3.4
    pydantic>=1.8.2
    rich>=10.4.0
    pathvalidate>=2.4.1

setup_requires =
    versioneer

[options.packages.find]
where = src

[versioneer]
VCS = git
style = pep440
versionfile_source = src/xeda/_version.py
versionfile_build = xeda/_version.py
tag_prefix =
parentdir_prefix = xeda-